fixed layout issues

--- a/styles.scss
+++ b/styles.scss
@@ -16,16 +16,18 @@
 }
 
 .card {
-    & > p {
-        font-size: 9px;
+    & > * {
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: grid;
     border: 2px solid black;
     margin: 3px;
-    padding: 1px;
+    padding: 14px;
     background-color: lightgoldenrodyellow;
+    height: 400px;
+    grid-template-rows: 50px 50px 260px 40px;
 }
 
 body {
